--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,4 +7,26 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import '../pages/home/home';
+@import '../pages/checkin/checkin';
+@import '../pages/login/login';
+@import '../pages/patient-detail/patient-detail';
+
+ion-content {
+	background-color: #53B6F0;
+}
+ion-nav.has-views, ion-tab.has-views {
+   background: transparent !important;
+}
+
+.toolbar {
+	min-height: 71px;
+	padding: 50px 15px 25px 15px;
+}
+
+button {
+	border: none !important;
+}
+
+ion-title {
+    padding: 50px 15px 25px 15px;
+}
