--- a/app/pages/consent/consent.scss
+++ b/app/pages/consent/consent.scss
@@ -1,3 +1,13 @@
 .consent {
 
 }
+ion-content.consent {
+   background: #FFFFFF;
+  color: #666666;
+}
+
+p.consent-text {
+  // font-family: "proximaNova-regular";
+  // font-size: 1.5rem;
+  color: #666666;
+}
