--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -44,4 +44,5 @@ $checkbox-md-icon-background-color-off: #fff;
 $checkbox-md-icon-border-color-off: #cecece;
 $checkbox-md-icon-border-color-on: #32db64;
 
+$kiosk-green: #6ECDB2;
 
