--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -14,6 +14,75 @@
 @import "../pages/consent/consent";
 @import "../pages/intake-forms/intake-forms";
 
+@font-face {
+  font-family: 'proxima';
+  src: url('/www/build/fonts/proximanova/proximanova-reg-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/www/build/fonts/proximanova/proximanova-reg-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/www/build/fonts/proximanova/proximanova-reg-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/www/build/fonts/proximanova/proximanova-reg-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/www/build/fonts/proximanova/proximanova-reg-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    font-weight: normal;
+    font-style: normal;
+
+  }
+@font-face {
+    font-family: 'proxima';
+  src: url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'proxima';
+  src: url('/styles/fonts/proximanova/proximanova-bold-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/styles/fonts/proximanova/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/styles/fonts/proximanova/proximanova-bold-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/styles/fonts/proximanova/proximanova-bold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/styles/fonts/proximanova/proximanova-bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    font-weight: bold;
+    font-style: normal;
+}
+ 
+@font-face {
+    font-family: 'proxima';
+  src: url('/styles/fonts/proximanova/proximanova-sbold-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/styles/fonts/proximanova/proximanova-sbold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/styles/fonts/proximanova/proximanova-sbold-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/styles/fonts/proximanova/proximanova-sbold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/styles/fonts/proximanova/proximanova-sbold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    font-weight: 600;
+    font-style: normal;
+}
+ 
+@font-face {
+    font-family: 'proxima';
+  src: url('/styles/fonts/proximanova/proximanova-light-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/styles/fonts/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/styles/fonts/proximanova/proximanova-light-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/styles/fonts/proximanova/proximanova-light-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/styles/fonts/proximanova/proximanova-light-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'proxima';
+  src: url('/styles/fonts/proximanova/proximanova-thin-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/styles/fonts/proximanova/proximanova-thin-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/styles/fonts/proximanova/proximanova-thin-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/styles/fonts/proximanova/proximanova-thin-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/styles/fonts/proximanova/proximanova-thin-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+    font-weight: 100;
+    font-style: normal;
+}
+
+body {
+	font-family: "proxima";
+	font-weight: normal;
+}
+
 ion-content {
 	background-color: #53B6F0;
 }
