--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -16,64 +16,64 @@
 
 @font-face {
   font-family: 'proxima';
-  src: url('/www/build/fonts/proximanova/proximanova-reg-webfont.eot'); /* IE9 Compat Modes */
-  src: url('/www/build/fonts/proximanova/proximanova-reg-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/www/build/fonts/proximanova/proximanova-reg-webfont.woff') format('woff'), /* Modern Browsers */
-       url('/www/build/fonts/proximanova/proximanova-reg-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/www/build/fonts/proximanova/proximanova-reg-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('/fonts/proximanova/proximanova-reg-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/proximanova/proximanova-reg-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/proximanova/proximanova-reg-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/proximanova/proximanova-reg-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/proximanova/proximanova-reg-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
     font-weight: normal;
     font-style: normal;
 
   }
 @font-face {
     font-family: 'proxima';
-  src: url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.eot'); /* IE9 Compat Modes */
-  src: url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.woff') format('woff'), /* Modern Browsers */
-       url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/www/build/fonts/proximanova/proximanova-regitalic-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('/fonts/proximanova/proximanova-regitalic-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/proximanova/proximanova-regitalic-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/proximanova/proximanova-regitalic-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/proximanova/proximanova-regitalic-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/proximanova/proximanova-regitalic-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: 'proxima';
-  src: url('/styles/fonts/proximanova/proximanova-bold-webfont.eot'); /* IE9 Compat Modes */
-  src: url('/styles/fonts/proximanova/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/styles/fonts/proximanova/proximanova-bold-webfont.woff') format('woff'), /* Modern Browsers */
-       url('/styles/fonts/proximanova/proximanova-bold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/styles/fonts/proximanova/proximanova-bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('/fonts/proximanova/proximanova-bold-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/proximanova/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/proximanova/proximanova-bold-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/proximanova/proximanova-bold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/proximanova/proximanova-bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
     font-weight: bold;
     font-style: normal;
 }
  
 @font-face {
     font-family: 'proxima';
-  src: url('/styles/fonts/proximanova/proximanova-sbold-webfont.eot'); /* IE9 Compat Modes */
-  src: url('/styles/fonts/proximanova/proximanova-sbold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/styles/fonts/proximanova/proximanova-sbold-webfont.woff') format('woff'), /* Modern Browsers */
-       url('/styles/fonts/proximanova/proximanova-sbold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/styles/fonts/proximanova/proximanova-sbold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('/fonts/proximanova/proximanova-sbold-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/proximanova/proximanova-sbold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/proximanova/proximanova-sbold-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/proximanova/proximanova-sbold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/proximanova/proximanova-sbold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
     font-weight: 600;
     font-style: normal;
 }
  
 @font-face {
     font-family: 'proxima';
-  src: url('/styles/fonts/proximanova/proximanova-light-webfont.eot'); /* IE9 Compat Modes */
-  src: url('/styles/fonts/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/styles/fonts/proximanova/proximanova-light-webfont.woff') format('woff'), /* Modern Browsers */
-       url('/styles/fonts/proximanova/proximanova-light-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/styles/fonts/proximanova/proximanova-light-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('/fonts/proximanova/proximanova-light-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/proximanova/proximanova-light-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/proximanova/proximanova-light-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/proximanova/proximanova-light-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
     font-family: 'proxima';
-  src: url('/styles/fonts/proximanova/proximanova-thin-webfont.eot'); /* IE9 Compat Modes */
-  src: url('/styles/fonts/proximanova/proximanova-thin-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/styles/fonts/proximanova/proximanova-thin-webfont.woff') format('woff'), /* Modern Browsers */
-       url('/styles/fonts/proximanova/proximanova-thin-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/styles/fonts/proximanova/proximanova-thin-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('/fonts/proximanova/proximanova-thin-webfont.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/proximanova/proximanova-thin-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/proximanova/proximanova-thin-webfont.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/proximanova/proximanova-thin-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/proximanova/proximanova-thin-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
     font-weight: 100;
     font-style: normal;
 }
@@ -81,6 +81,7 @@
 body {
 	font-family: "proxima";
 	font-weight: normal;
+	// font-style: italic;
 }
 
 ion-content {
