changed the buttons so they clicked on the ionicUpload site

--- a/app/pages/intake-forms/intake-forms.scss
+++ b/app/pages/intake-forms/intake-forms.scss
@@ -1,47 +1,53 @@
 .intake-forms {
 	background: #FFFFFF;
-	 color: #666666;
+	color: #666666;
 
-// .my-class {
-//    background: transparent !important;
-//     border: 1px solid $kiosk-green !important;
-//     color: $kiosk-green ;
-//     box-shadow: none;
-//   }
-// .button {
-//    background: transparent !important;
-//     border: 1px solid $kiosk-green !important;
-//     color: $kiosk-green ;
-//     box-shadow: none;
-//   }
-//   .my-button {
-//   	background: yellow !important;
-//   }
+  // .background {
+  //   background: transparent;
+  //   border: 1px solid $kiosk-green !important;
+  //   color: $kiosk-green ;
+  //   box-shadow: none;
+  // }
 
-.background {
-  background: transparent;
-    border: 1px solid $kiosk-green !important;
+  // .background2 {
+  //   background-color: $kiosk-green;
+  //   color: white;
+
+  //   .activated{
+  //     background-color: $kiosk-green;
+  //   }
+  // }
+
+  .button {
+    background: transparent;
+    border: 1px solid $kiosk-green;
     color: $kiosk-green ;
     box-shadow: none;
-}
+    text-align: center;
 
-.background2 {
-  background-color: $kiosk-green;
-  color: white;
-}
-
-.button:hover:not(.disable-hover) {
+  }
+  .button:hover:not(.disable-hover) {
     background-color: $kiosk-green;
     color: white;
-}
-
-
-
-  .col {
-  	height: 120px
   }
 
- 
+  h2.title-type {
+    font-weight: 300;
+  }
+
+  h4.questions {
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  h5.description {
+     color: #979797;
+  }
+
+  
+  
+    
+    
 }
 
 
