added better search bar

--- a/app/pages/checkin/checkin.scss
+++ b/app/pages/checkin/checkin.scss
@@ -1,3 +1,7 @@
+ion-searchbar {
+    min-height: 70px;
+    background: #1496E3;
+}
 .statusLeft {
 	color: white;
 }
@@ -19,3 +23,7 @@ span.statusRight {
 ion-list {
     margin-top: 25px;
 }
+
+// .ios .hide-border .toolbar-background {
+//   border-bottom-color: transparent;
+// }
