--- a/app/pages/checkin/checkin.scss
+++ b/app/pages/checkin/checkin.scss
@@ -7,7 +7,11 @@ ion-searchbar {
 }
 span.statusRight {
     float: right;
-    color: white;
+    color: #666;
+}
+span.checkin-right {
+    float: right;
+    color: #FFF;
 }
 
 .logo {
